--- a/.github/workflows/release-online-feature-store.yml
+++ b/.github/workflows/release-online-feature-store.yml
@@ -26,7 +26,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     strategy:
       matrix:
