--- a/.github/workflows/release-py-sdk.yml
+++ b/.github/workflows/release-py-sdk.yml
@@ -22,7 +22,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       id-token: write
     steps:
       - name: Checkout repository
@@ -37,7 +37,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install build twine
-
+      - name: Set version without v prefix
+        id: version
+        run: |
+          VERSION="${{ inputs.version }}"
+          VERSION_NO_V="${VERSION#v}"
+          echo "version_no_v=$VERSION_NO_V" >> $GITHUB_OUTPUT
       - name: Verify VERSION files
         run: |
           echo "📋 Current VERSION file contents:"
@@ -130,17 +135,17 @@ jobs:
             
             #### bharatml-commons
             ```bash
-            pip install bharatml-commons==${{ inputs.version }}
+            pip install bharatml-commons==${{ steps.version.outputs.version_no_v }}
             ```
             
             #### spark-feature-push-client
             ```bash
-            pip install spark-feature-push-client==${{ inputs.version }}
+            pip install spark-feature-push-client==${{ steps.version.outputs.version_no_v }}
             ```
             
             #### grpc-feature-client
             ```bash
-            pip install grpc-feature-client==${{ inputs.version }}
+            pip install grpc-feature-client==${{ steps.version.outputs.version_no_v }}
             ```
             
             ### 🚀 Features
@@ -177,9 +182,9 @@ jobs:
             Install from TestPyPI for testing:
             
             ```bash
-            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ bharatml-commons==${{ inputs.version }}
-            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ spark-feature-push-client==${{ inputs.version }}
-            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ grpc-feature-client==${{ inputs.version }}
+            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ bharatml-commons==${{ steps.version.outputs.version_no_v }}
+            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ spark-feature-push-client==${{ steps.version.outputs.version_no_v }}
+            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ grpc-feature-client==${{ steps.version.outputs.version_no_v }}
             ```
             
             ### 🔧 Changes
@@ -209,9 +214,9 @@ jobs:
             Install from TestPyPI for testing:
             
             ```bash
-            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ bharatml-commons==${{ inputs.version }}
-            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ spark-feature-push-client==${{ inputs.version }}
-            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ grpc-feature-client==${{ inputs.version }}
+            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ bharatml-commons==${{ steps.version.outputs.version_no_v }}
+            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ spark-feature-push-client==${{ steps.version.outputs.version_no_v }}
+            pip install --index-url https://test.pypi.org/simple/ --extra-index-url https://pypi.org/simple/ grpc-feature-client==${{ steps.version.outputs.version_no_v }}
             ```
             
             ### 🔧 Changes
