--- a/py-sdk/grpc_feature_client/pyproject.toml
+++ b/py-sdk/grpc_feature_client/pyproject.toml
@@ -33,7 +33,7 @@ classifiers = [
 
 [tool.hatch.version]
 path = "VERSION"
-pattern = "v(?P<version>[^\\s]+)"
+pattern = "(?P<version>[^\\s]+)"
 
 [tool.hatch.build.targets.wheel]
 packages = ["grpc_feature_client"]
