--- a/.github/workflows/release-py-sdk.yml
+++ b/.github/workflows/release-py-sdk.yml
@@ -42,11 +42,18 @@ jobs:
         run: |
           VERSION="${{ inputs.version }}"
           RUN_NUMBER="${{ github.run_number }}"
-          VERSION_NO_V="${VERSION#v}${RUN_NUMBER}"
-          echo "version=$VERSION"
-          echo "run_number=$RUN_NUMBER"
-          echo "version=$VERSION_NO_V"
-          echo "version_no_v=$VERSION_NO_V" >> $GITHUB_OUTPUT
+
+          if [[ "$VERSION" == *.dev || "$VERSION" == *.b ]]; then
+            VERSION_NO_V="${VERSION}${RUN_NUMBER}"
+          else
+            VERSION_NO_V="$VERSION"
+          fi
+
+            echo "version=$VERSION"
+            echo "run_number=$RUN_NUMBER"
+            echo "final version=$VERSION_NO_V"
+
+            echo "version_no_v=$VERSION_NO_V" >> "$GITHUB_OUTPUT"
       - name: Verify VERSION files
         run: |
           echo "📋 Current VERSION file contents:"
@@ -149,10 +156,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: py-sdk/${{ inputs.version }}
-          release_name: Python SDK ${{ inputs.version }}
+          tag_name: py-sdk/${{ steps.version.outputs.version_no_v }}
+          release_name: Python SDK ${{ steps.version.outputs.version_no_v }}
           body: |
-            ## Python SDK Release ${{ inputs.version }}
+            ## Python SDK Release ${{ steps.version.outputs.version_no_v }}
             
             ### 📦 Published Packages
             All packages have been published to PyPI:
@@ -195,10 +202,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: py-sdk/${{ inputs.version }}
-          release_name: Python SDK ${{ inputs.version }} (Beta)
+          tag_name: py-sdk/${{ steps.version.outputs.version_no_v }}
+          release_name: Python SDK ${{ steps.version.outputs.version_no_v }} (Beta)
           body: |
-            ## Python SDK Beta Release ${{ inputs.version }}
+            ## Python SDK Beta Release ${{ steps.version.outputs.version_no_v }}
             
             ⚠️ **This is a beta release from the develop branch** - Published to TestPyPI for testing purposes.
             
@@ -227,10 +234,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: py-sdk/${{ inputs.version }}
-          release_name: Python SDK ${{ inputs.version }} (Alpha)
+          tag_name: py-sdk/${{ steps.version.outputs.version_no_v }}
+          release_name: Python SDK ${{ steps.version.outputs.version_no_v }} (Alpha)
           body: |
-            ## Python SDK Alpha Release ${{ inputs.version }}
+            ## Python SDK Alpha Release ${{ steps.version.outputs.version_no_v }}
             
             ⚠️ **This is an alpha release from a feature/fix branch** - Experimental build published to TestPyPI for development and testing.
             
