--- a/.github/workflows/release-go-sdk.yml
+++ b/.github/workflows/release-go-sdk.yml
@@ -17,6 +17,11 @@ on:
         required: false
         type: boolean
         default: false
+      branch:
+        description: 'Branch to release from'
+        required: true
+        type: string
+        default: 'main'
 
 jobs:
   release:
@@ -28,6 +33,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ inputs.branch }}
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -36,6 +42,7 @@ jobs:
 
       - name: Validate Go SDK
         run: |
+          echo "Current branch: ${{ github.ref }}"
           cd go-sdk
           go mod tidy
           go test -v ./...
