--- a/.github/workflows/release-online-feature-store.yml
+++ b/.github/workflows/release-online-feature-store.yml
@@ -17,6 +17,11 @@ on:
         required: false
         type: boolean
         default: false
+      branch:
+        description: 'Branch to release from'
+        required: true
+        type: string
+        default: 'main'
 
 env:
   REGISTRY: ghcr.io
@@ -37,6 +42,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ inputs.branch }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
