--- a/.github/workflows/release-trufflebox-ui.yml
+++ b/.github/workflows/release-trufflebox-ui.yml
@@ -17,7 +17,11 @@ on:
         required: false
         type: boolean
         default: false
-
+      branch:
+        description: 'Branch to release from'
+        required: true
+        type: string
+        default: 'main'
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/trufflebox-ui
@@ -31,6 +35,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ inputs.branch }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
