Added skip upload in case release is there in PyPI

--- a/.github/workflows/release-py-sdk.yml
+++ b/.github/workflows/release-py-sdk.yml
@@ -154,7 +154,20 @@ jobs:
         if: ${{ !inputs.is_beta && !inputs.is_alpha }}
         run: |
           echo "📤 Publishing to PyPI (Production Release)..."
-          twine upload dist/*
+          if ! twine upload dist/* 2>&1 | tee upload_output.log; then
+            if grep -q "File already exists" upload_output.log; then
+              echo "⚠️  Some files already exist on PyPI, but continuing with release process..."
+              echo "📋 Upload output:"
+              cat upload_output.log
+              echo "✅ Skipping upload error and continuing with GitHub release creation"
+            else
+              echo "❌ Upload failed with a different error:"
+              cat upload_output.log
+              exit 1
+            fi
+          else
+            echo "✅ All packages uploaded successfully to PyPI"
+          fi
         env:
           TWINE_USERNAME: __token__
           TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
