--- a/model-registry/Cargo.toml
+++ b/model-registry/Cargo.toml
@@ -13,3 +13,5 @@ aws-sdk-s3 = "1.12"
 cloud-storage = "0.11"
 url = "2.4"
 anyhow = "1.0"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
