feat: add Numerix service integration to Horizon

--- a/horizon/env.example
+++ b/horizon/env.example
@@ -32,3 +32,6 @@ SCYLLA_1_USERNAME=
 
 SCYLLA_ACTIVE_CONFIG_IDS=1
 REDIS_FAILOVER_ACTIVE_CONFIG_IDS=4
+
+NUMERIX_APP_NAME=numerix
+NUMERIX_MONITORING_URL=http://localhost:8125/numerix_dashboard
