--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,26 @@
+# Rust
+target/
+
+# Java (Maven)
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/
+*.class
+
+# IDE files
+.idea/
+.vscode/
+*.iml
+
+# OS files
+.DS_Store
+
+# Other
 .pre-commit-config.yaml
 trufflehog/
-trufflebox-ui/node_modules/
-dist/
-.env*
-.idea/
-workspace/
