--- a/helm/trufflebox-ui/Chart.yaml
+++ b/helm/trufflebox-ui/Chart.yaml
@@ -1,20 +1,20 @@
 apiVersion: v2
-name: online-feature-store
-description: BharatMLStack Online Feature Store - A hyper-scalable feature store for real-time ML
+name: trufflebox-ui
+description: BharatMLStack TruffleBox UI - Management console for the feature store ecosystem
 type: application
 version: 1.0.0
 appVersion: "1.0.0"
-home: https://github.com/Meesho/BharatMLStack
+home: https://github.com/AbhijithGanesh/BharatMLStack
 sources:
-  - https://github.com/Meesho/BharatMLStack/tree/main/online-feature-store
+  - https://github.com/AbhijithGanesh/BharatMLStack/tree/main/trufflebox-ui
 maintainers:
   - name: BharatMLStack Team
     email: contact@bharatmlstack.dev
 keywords:
   - machine-learning
   - feature-store
-  - real-time
-  - ml-platform
+  - web-ui
+  - management-console
   - bharatmlstack
 annotations:
   category: Machine Learning
