Added Numerix QuickStart and Readme, Docker run fix for other modules

--- a/numerix/env.example
+++ b/numerix/env.example
@@ -1,10 +1,16 @@
-TELEGRAF_UDP_HOST="127.0.0.1"
-TELEGRAF_UDP_PORT=8125
-APPLICATION_PORT=8080
-METRIC_SAMPLING_RATE=1
-APP_ENV="PROD"
-APP_NAME="numerix"
-ETCD_SERVERS="127.0.0.1:2379"
-APP_LOG_LEVEL="INFO"
+# APPLICATION CONFIGURATION - Basic app settings
+APPLICATION_PORT=8083
+APP_ENV=prd
+APP_LOG_LEVEL=ERROR
+APP_NAME=numerix
+
+# MATRIX OPERATIONS CONFIGURATION - Performance tuning
 CHANNEL_BUFFER_SIZE=10000
-LOG_SAMPLING_RATE=0.5
+
+# ETCD CONFIGURATION - Distributed configuration management
+ETCD_SERVERS=127.0.0.1:2379
+
+# MONITORING CONFIGURATION - Metrics and observability
+METRIC_SAMPLING_RATE=1
+TELEGRAF_UDP_HOST=127.0.0.1
+TELEGRAF_UDP_PORT=8125
