--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
     outputs:
       horizon-changed: ${{ steps.changes.outputs.horizon }}
       trufflebox-ui-changed: ${{ steps.changes.outputs.trufflebox-ui }}
+      numerix-changed: ${{ steps.changes.outputs.numerix }}
       online-feature-store-changed: ${{ steps.changes.outputs.online-feature-store }}
       go-sdk-changed: ${{ steps.changes.outputs.go-sdk }}
       py-sdk-changed: ${{ steps.changes.outputs.py-sdk }}
@@ -36,6 +37,8 @@ jobs:
               - 'horizon/**'
             trufflebox-ui:
               - 'trufflebox-ui/**'
+            numerix:
+              - 'numerix/**'
             online-feature-store:
               - 'online-feature-store/**'
             go-sdk:
@@ -51,6 +54,9 @@ jobs:
             changed_count=$((changed_count + 1))
           fi
           if [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ]; then
+            changed_count=$((changed_count + 1))
+          fi
+          if [ "${{ steps.changes.outputs.numerix }}" == "true" ]; then
             changed_count=$((changed_count + 1))
           fi
           if [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ]; then
@@ -72,7 +78,7 @@ jobs:
       - name: Check if any component changed
         id: check-any
         run: |
-          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ]; then
+          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.numerix }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ]; then
             echo "any=true" >> $GITHUB_OUTPUT
           else
             echo "any=false" >> $GITHUB_OUTPUT
@@ -88,6 +94,7 @@ jobs:
           echo "Component builds are handled by individual workflows:"
           echo "- Horizon CI: ${{ needs.detect-changes.outputs.horizon-changed }}"
           echo "- Trufflebox UI CI: ${{ needs.detect-changes.outputs.trufflebox-ui-changed }}"
+          echo "- Numerix CI: ${{ needs.detect-changes.outputs.numerix-changed }}"
           echo "- Online Feature Store CI: ${{ needs.detect-changes.outputs.online-feature-store-changed }}"
           echo "- Go SDK CI: ${{ needs.detect-changes.outputs.go-sdk-changed }}"
           echo "- Python SDK CI: ${{ needs.detect-changes.outputs.py-sdk-changed }}"
@@ -105,7 +112,8 @@ jobs:
         run: |
           echo "Running integration tests for API compatibility..."
           echo "Checking if Horizon API is compatible with Online Feature Store..."
-          echo "Checking if Trufflebox UI can communicate with both services..."
+          echo "Checking if Trufflebox UI can communicate with backend services..."
+          echo "Testing Numerix matrix operations integration..."
           echo "Testing Go SDK compatibility with backend services..."
           echo "Testing Python SDK compatibility with backend services..."
           # Add actual integration test commands here
@@ -183,6 +191,7 @@ jobs:
           echo "### Component Status" >> $GITHUB_STEP_SUMMARY
           echo "- Horizon: ${{ needs.detect-changes.outputs.horizon-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Trufflebox UI: ${{ needs.detect-changes.outputs.trufflebox-ui-changed }}" >> $GITHUB_STEP_SUMMARY
+          echo "- Numerix: ${{ needs.detect-changes.outputs.numerix-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Online Feature Store: ${{ needs.detect-changes.outputs.online-feature-store-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Go SDK: ${{ needs.detect-changes.outputs.go-sdk-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Python SDK: ${{ needs.detect-changes.outputs.py-sdk-changed }}" >> $GITHUB_STEP_SUMMARY 
