--- a/.github/workflows/numerix.yml
+++ b/.github/workflows/numerix.yml
@@ -27,6 +27,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: 1.80
+          components: rustfmt, clippy
 
       - name: Cache Rust dependencies
         uses: actions/cache@v3
