Create a new p2p test deployable (#35)

--- a/online-feature-store/config.yaml
+++ b/online-feature-store/config.yaml
@@ -20,6 +20,7 @@ environment:
             - online-feature-store-consumer-v4
             - online-feature-store-consumer-realtime
             - online-feature-store-consumer-v5
+            - online-feature-store-api-secondary-p2p-test
     stg:
         deployment_order:
             - online-feature-store-api
